2003-02-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: when adding a control, assign default names to th
	children that don't have one.

2003-02-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SimpleWebHandlerParser.cs: modified to use the new parser interface.

2003-01-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: some more tweaks to naming containers stuff.
	* DataBinder.cs: don't throw exception if the container is null.

	* Page.cs: now we can render client scripts, startup scripts and hidden
	fields. Only render __VIEWSTATE if there is someone that will take care
	of it.
	(RaisePostBackEvents): first try the last one that required raise event,
	then try __EVENTTARGET.

2003-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: fixes in UniqueID, FindControl, AddedControl,
	UnloadRecursive, InitRecursive. Reduced the size of __VIEWSTATE. Made
	FindControl work with NamingContainers.
	
	* ControlCollection.cs: notify the parent when clearing the collection.

	* LosFormatter.cs: Added debugging output and generate a valid
	viewstate even for unknown types.

	* Page.cs: GetPostBackEventReference now uses UniqueID. Reduced
	viewstate.

2003-01-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Page.cs: make it fire the LoadData related events also for controls
	such as ImageButton, whose variable(s) in the query string are of the
	form ctrl_name.x and only fire them once per control.

2003-01-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataBinder.cs:
	(GetPropertyValue): don't try to get the property as indexed

2003-01-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataBinder.cs: use TypeDescriptor to get the properties and their
	values.

2003-01-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs:
	(AddedControl): take the children to the same state of the parent.
	(InitRecursive): set the page of the children.

	* Page.cs: removed one line (it's done a few lines above).
